kubernetes/narrative-core/recovery/narrative-core-service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: narrative-core
  name: narrative-core
  namespace: recovery
spec:
  ports:
  - name: nc
    port: 8080
    targetPort: 8080
  selector:
    app: narrative-core
